[gd_scene load_steps=18 format=2]

[ext_resource path="res://Characters/Ammo/Missile.gd" type="Script" id=1]
[ext_resource path="res://Data/Sprites/missile1.png" type="Texture" id=2]
[ext_resource path="res://Data/Sprites/missile1_explosion.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.49998
height = 14.0

[sub_resource type="Animation" id=3]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Explosion:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2 ]
}

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 0.415686, 0.415686, 0.415686, 1, 0.866667, 0.866667, 0.866667, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.286319 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 2
emission_box_extents = Vector3( 1, 2, 1 )
flag_disable_z = true
gravity = Vector3( -98, 0, 0 )
angular_velocity = 90.0
angular_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
scale_curve = SubResource( 8 )
color_ramp = SubResource( 6 )

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0, 0.252475, 0.762376 )
colors = PoolColorArray( 0.298039, 0.345098, 0.92549, 1, 0.854902, 0.67451, 0.219608, 1, 1, 0, 0, 1 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="Curve" id=12]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.703381, 0.440682 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=13]
curve = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=14]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.75
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
scale_curve = SubResource( 13 )
color_ramp = SubResource( 11 )

[node name="Missile" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 0
collision_mask = 4
script = ExtResource( 1 )
speed = 4000.0
accel = 1.2

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 2 )
hframes = 4

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 6
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 12, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.5, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Lifespan" type="Timer" parent="."]

[node name="Explosion" type="Sprite" parent="."]
visible = false
position = Vector2( 12, 0 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/explode = SubResource( 3 )
anims/fly = SubResource( 4 )

[node name="SmokeParticles" type="Particles2D" parent="."]
position = Vector2( -12.5, 0 )
z_index = -1
amount = 24
lifetime = 0.6
process_material = SubResource( 9 )

[node name="ExplosionParticles" type="Particles2D" parent="."]
position = Vector2( 12, 0 )
emitting = false
amount = 150
lifetime = 0.3
process_material = SubResource( 14 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Lifespan" to="." method="_on_Lifespan_timeout"]
